--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       $('#btn').click(function(){
         $('div').hide('slow',function(){
             $('div').show(2000, function(){
-                $('div').css("background-color", "yellow")
+                $('div').css("background-color", "green")
             });
         })
       })
